2010-07-23  Justin Schuh  <jschuh@chromium.org>

        Unreviewed, rolling out r63959.
        http://trac.webkit.org/changeset/63959
        https://bugs.webkit.org/show_bug.cgi?id=42884

        63925 introduced a regression and is being reverted.

        * platform/chromium-mac/fast/history/history-replace-illegal-expected.txt: Removed.
        * platform/chromium-win/fast/history/history-replace-illegal-expected.txt: Removed.

2010-07-23  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed.

        Process link elements immediately if there are no beforeload listeners.
        https://bugs.webkit.org/show_bug.cgi?id=42859

        Add Qt specific expected result after r63924.

        * platform/qt/http/tests/security/mixedContent: Added.
        * platform/qt/http/tests/security/mixedContent/insecure-css-in-main-frame-expected.txt: Copied from LayoutTests/http/tests/security/mixedContent/insecure-css-in-main-frame-expected.txt and updated.

2010-07-23  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed.

        [Qt] Search input field doesn't have cancel button
        https://bugs.webkit.org/show_bug.cgi?id=42887

        * platform/qt/Skipped: fast/forms/search-cancel-button-events.html skipped until fix.

2010-07-23  Marcus Bulach  <bulach@chromium.org>

        Unreviewed. Adds expectations for chromium.

        [chromium] Updates baselines following changes in history (http://trac.webkit.org/changeset/63925)
        https://bugs.webkit.org/show_bug.cgi?id=42884

        * platform/chromium-mac/fast/history/history-replace-illegal-expected.txt: Added.
        * platform/chromium-win/fast/history/history-replace-illegal-expected.txt: Added.

2010-07-22  Marcus Bulach  <bulach@chromium.org>

        Reviewed by Dimitri Glazkov.

        [chromium] Updates baselines following changes in border drawing code (http://trac.webkit.org/changeset/63864).
        https://bugs.webkit.org/show_bug.cgi?id=42822
