@@ -1,16 +1,0 @@
-<html>
-<head>
-<base href="https://www.test.com/">
-<script>
-if (window.layoutTestController)
-    layoutTestController.dumpAsText();
-
-window.onload = function(){
-    window.history.replaceState({}, {}, 'https://www.test.com/');
-};
-</script>
-</head>
-<body>
-This page should trigger an error on attempting to set the URL bar to https://www.test.com/
-</body>
-</html>
