@@ -1,5 +1,16 @@
 2010-07-23  Justin Schuh  <jschuh@chromium.org>
 
+        Unreviewed, rolling out r63925.
+        http://trac.webkit.org/changeset/63925
+        https://bugs.webkit.org/show_bug.cgi?id=42858
+
+        Introduced a regression in history state.
+
+        * fast/history/history-replace-illegal-expected.txt: Removed.
+        * fast/history/history-replace-illegal.html: Removed.
+
+2010-07-23  Justin Schuh  <jschuh@chromium.org>
+
         Unreviewed, rolling out r63959.
         http://trac.webkit.org/changeset/63959
         https://bugs.webkit.org/show_bug.cgi?id=42884
